@@ -323,6 +323,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   skins
 * Fixed a PHP notice when $wgEnableSerializedMessages was set to false
 * (bug 18316) Removed superfluous name="fulltext" from Special:Search
+* (bug 18331) MediaWiki:Undelete-revision can now have wikitext
 
 == API changes in 1.15 ==
 * (bug 16858) Revamped list=deletedrevs to make listing deleted contributions
